fixed horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ a {
 }
 
 .container {
-  min-width: 296px;
+  min-width: 288px;
   max-width: 428px;
   margin: 0 auto;
   padding: 0 16px;
